added basic HTML structure

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,42 @@
     <title>Max Karlsson</title>
   </head>
   <body>
-    <main class="wrapper">
-      <header></header>
+    <header>
+      <nav class="top-nav">
+        <ul class="nav">
+          <li class="nav__item">
+            <a href="#about">About</a>
+          </li>
+          <li class="nav__item">
+            <a href="#projects">Projects</a>
+          </li>
+          <li class="nav__item">
+            <a href="#skills">Skills</a>
+          </li>
+          <li class="nav__item">
+            <a href="#contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="about"></section>
+      <section id="projects">
+        <div class="project-card">
+          <div class="project-card__img"></div>
+          <div class="project-card__title"></div>
+          <div class="project-card__desc"></div>
+        </div>
+      </section>
+      <section id="skills"></section>
+      <section id="contact"></section>
     </main>
+    <footer>
+      <ul class="contact-list">
+        <li class="contact-list__item">Github</li>
+        <li class="contact-list__item">LinkedIn</li>
+        <li class="contact-list__item">Mail</li>
+      </ul>
+    </footer>
   </body>
 </html>
