--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/scss/main.scss" />
     <script defer type="module" src="/src/ts/main.ts"></script>
-    <title>Max Karlsson</title>
+    <title>(icon)Max Karlsson</title>
   </head>
   <body>
     <header>
